--- a/textHCJ-1.html
+++ b/textHCJ-1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>任务一：表单（一）单个表单项的检验</title>
-	<link rel="stylesheet" href="../css/textHCJ-1.css">
+	<link rel="stylesheet" href="css/textHCJ-1.css">
 </head>
 <body>
 <div>
@@ -13,6 +13,6 @@
 <p id="p1"></p>
 </div>
 
-<script src="../js/textHCJ-1.js"></script>	
+<script src="js/textHCJ-1.js"></script>	
 </body>
 </html>
