--- a/textHCJ-2.html
+++ b/textHCJ-2.html
@@ -17,7 +17,7 @@
 <p id="p2"></p>
 </div>
 <div>
-<label>密码确认</label>
+<label>&nbsp&nbsp密码确认</label>
 <input type="password" id="ipt3">
 <p id="p3"></p>
 </div>
