--- a/textHCJ-2.html
+++ b/textHCJ-2.html
@@ -7,27 +7,27 @@
 </head>
 <body>
 <div>
-<label>&nbsp&nbsp&nbsp&nbsp名称</label>
+<label>&nbsp&nbsp名称</label>
 <input type="text" id="ipt1">
 <p id="p1"></p>
 </div>
 <div>
-<label>&nbsp&nbsp&nbsp&nbsp密码</label>
+<label>&nbsp&nbsp密码</label>
 <input type="password" id="ipt2">
 <p id="p2"></p>
 </div>
 <div>
-<label>&nbsp&nbsp密码确认</label>
+<label>密码确认</label>
 <input type="password" id="ipt3">
 <p id="p3"></p>
 </div>
 <div>
-<label>&nbsp&nbsp&nbsp&nbsp邮箱</label>
+<label>&nbsp&nbsp邮箱</label>
 <input type="text" id="ipt4">
 <p id="p4"></p>
 </div>
 <div>
-<label>&nbsp&nbsp&nbsp&nbsp手机</label>
+<label>&nbsp&nbsp手机</label>
 <input type="text" id="ipt5">
 <p id="p5"></p>
 <button id="btn">验证</button>
